--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,20 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700');
 body {
-  padding-top: 0px;
+  margin: 0px;
+  padding: 0px;
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1.5em;
+  background-color: #ffffff;
+  color: #000000;
 }
 h3 {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+.searchTool form div {
+  width: 100%;
   text-align: center;
 }
