--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   color: #000000;
 }
 h3,
-h5 {
+h6 {
   margin: 0px;
   padding: 0px;
   text-align: center;
@@ -28,4 +28,14 @@ h5 {
 }
 .imageShown {
   flex: 1;
+}
+.backgroundDivClass {
+  position: relative;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  /* background-repeat: no-repeat; */
 }
