--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ h6 {
 }
 .backgroundDivClass {
   position: relative;
-  margin: 0px;
-  padding: 0px;
-  text-align: center;
-  width: 100px;
-  height: 100px;
-  background-size: contain;
-  /* background-repeat: no-repeat; */
+  margin: 0% auto;
+  padding: 5% 5%;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
 }
