--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700');
+html {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0px;
   padding: 0px;
@@ -8,6 +14,8 @@ body {
   font-size: 1.5em;
   background-color: #ffffff;
   color: #000000;
+  width: 100%;
+  height: 100%;
 }
 h3,
 h6 {
@@ -29,13 +37,17 @@ h6 {
 .imageShown {
   flex: 1;
 }
+/* 
 .backgroundDivClass {
   position: relative;
-  margin: 0% auto;
+  margin: auto;
   padding: 5% 5%;
+  padding: auto;
   justify-content: center;
   align-items: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  height: 100%;
 }
+*/
